Make initial markup

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/shared.css">
+    <title>DIFT12</title>
 </head>
 <body>
-    
+    <nav>
+        <a href="#" class="command" id="me">me</a>
+        <a href="#" class="command" id="work">work</a>
+        <a href="#" class="command" id="stack">stack</a>
+        <a href="#" class="command" id="contact">contact</a>
+    </nav>
+
+    <main>
+        <section class="hero">
+            <h1 class="badge">
+                whoami
+            </h1>
+        </section>
+
+    </main>
+
 </body>
 </html>
