--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script src="https://kit.fontawesome.com/cd4f8939d4.js" crossorigin="anonymous"></script>
     <script src="./js/showCorrectNavItem.js" defer></script>
-
+    <script src="./js/fuckyousafari.js" defer></script>
 
     <script type='text/javascript' src='//cdn.jsdelivr.net/jquery.marquee/1.3.1/jquery.marquee.min.js' defer></script>
 
